==> yohanes-erwin/stm32f103-keil/rotary-encoder-timer-4x-resolution/lcd16x2.c <==
#include "lcd16x2.h"

void lcd16x2_init(uint8_t disp_attr)
{
	// Delay initialization
	DelayInit();
	
	// GPIO clock for control and data lines
	RCC_APB2PeriphClockCmd(LCD16X2_RCC_GPIO_CONTROL, ENABLE);
	RCC_APB2PeriphClockCmd(LCD16X2_RCC_GPIO_DATA, ENABLE);
	
	// Configure I/O for control lines as output
	GPIO_InitStruct.GPIO_Pin = LCD16X2_PIN_RS | LCD16X2_PIN_RW | 
		LCD16X2_PIN_EN;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_Init(LCD16X2_GPIO_CONTROL, &GPIO_InitStruct);
	
	// Configure I/O for data lines as output
	GPIO_InitStruct.GPIO_Pin = LCD16X2_PIN_D4 | LCD16X2_PIN_D5 | 
		LCD16X2_PIN_D6 | LCD16X2_PIN_D7;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_Init(LCD16X2_GPIO_DATA, &GPIO_InitStruct);

	// Delay power on 
	DelayUs(LCD16X2_DELAY_POWER_ON);
	
	// Initialize 8-bit mode first
	LCD16X2_GPIO_D5->BSRR = LCD16X2_PIN_D5;	// Function set
	LCD16X2_GPIO_D4->BSRR = LCD16X2_PIN_D4;	// 8-bit mode
	lcd16x2_toggle_e();
	// Delay, busy flag can't be checked here
	DelayUs(LCD16X2_DELAY_INIT);
	
	// Repeat last command
	lcd16x2_toggle_e();
	// Delay, busy flag can't be checked here
	DelayUs(LCD16X2_DELAY_INIT_REP);
	
	// Repeat last command for third time
	lcd16x2_toggle_e();
	// Delay, busy flag can't be checked here
	DelayUs(LCD16X2_DELAY_INIT_REP);
	
	// Initialize 4-bit mode
	LCD16X2_GPIO_D5->BSRR = LCD16X2_PIN_D5;	// Function set
	LCD16X2_GPIO_D4->BRR = LCD16X2_PIN_D4;	// 4-bit mode
	lcd16x2_toggle_e();
	DelayUs(LCD16X2_DELAY_INIT_4BIT);
	
	/* From now the LCD only accepts 4 bit I/O */
	
	// 4-bit interface, 2 lines, 5x7 dot format font
	lcd16x2_write_command(LCD16X2_FUNCTION_SET | LCD16X2_4BIT_INTERFACE | 
		LCD16X2_2LINE_MODE | LCD16X2_5X7DOT_FORMAT);
	// Display off
	lcd16x2_write_command(LCD16X2_DISPLAY_CURSOR_ON_OFF | LCD16X2_DISPLAY_OFF);
	// Clear screen
	lcd16x2_clrscr();
	// Entry mode
	lcd16x2_entry_inc();
	// Display cursor on off
	display_cursor_on_off_control = disp_attr;
	lcd16x2_write_command(LCD16X2_DISPLAY_CURSOR_ON_OFF | 
		display_cursor_on_off_control);
}

static void lcd16x2_write(uint8_t data, uint8_t rs)
{
	// Write mode (RW = 0)
	LCD16X2_GPIO_RS->BRR = LCD16X2_PIN_RW;
	
	if (rs)
		// Write data (RS = 1)
		LCD16X2_GPIO_RS->BSRR = LCD16X2_PIN_RS;
	else		
		// Write instruction (RS = 0)
		LCD16X2_GPIO_RS->BRR = LCD16X2_PIN_RS;
	
	// Configure all data pins as output
	GPIO_InitStruct.GPIO_Pin = LCD16X2_PIN_D4 | LCD16X2_PIN_D5 | 
		LCD16X2_PIN_D6 | LCD16X2_PIN_D7;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_Init(LCD16X2_GPIO_DATA, &GPIO_InitStruct);
	
	// Output high nibble first
	LCD16X2_GPIO_D7->BRR = LCD16X2_PIN_D7;
	LCD16X2_GPIO_D6->BRR = LCD16X2_PIN_D6;
	LCD16X2_GPIO_D5->BRR = LCD16X2_PIN_D5;
	LCD16X2_GPIO_D4->BRR = LCD16X2_PIN_D4;
	if (data & 0x80) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D7;
	if (data & 0x40) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D6;
	if (data & 0x20) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D5;
	if (data & 0x10) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D4;
	lcd16x2_toggle_e();
	
	// Output low nibble
	LCD16X2_GPIO_D7->BRR = LCD16X2_PIN_D7;
	LCD16X2_GPIO_D6->BRR = LCD16X2_PIN_D6;
	LCD16X2_GPIO_D5->BRR = LCD16X2_PIN_D5;
	LCD16X2_GPIO_D4->BRR = LCD16X2_PIN_D4;
	if (data & 0x08) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D7;
	if (data & 0x04) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D6;
	if (data & 0x02) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D5;
	if (data & 0x01) LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D4;
	lcd16x2_toggle_e();
	
	// All data pins high (inactive)
	LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D7;
	LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D6;
	LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D5;
	LCD16X2_GPIO_D7->BSRR = LCD16X2_PIN_D4;
}

static uint8_t lcd16x2_read(uint8_t rs)
{
	uint8_t data = 0;
	
	// Read mode (RW = 1)
	LCD16X2_GPIO_RS->BSRR = LCD16X2_PIN_RW;
	
	if (rs)
		// Read data (RS = 1)
		LCD16X2_GPIO_RS->BSRR = LCD16X2_PIN_RS;
	else
		// Read busy flag and DDRAM address (RS = 0)
		LCD16X2_GPIO_RS->BRR = LCD16X2_PIN_RS;
		
	// Configure all data pins as input
	GPIO_InitStruct.GPIO_Pin = LCD16X2_PIN_D4 | LCD16X2_PIN_D5 | 
		LCD16X2_PIN_D6 | LCD16X2_PIN_D7;
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_IPU;
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_Init(LCD16X2_GPIO_DATA, &GPIO_InitStruct);
	
	// EN pin = HIGH
	LCD16X2_GPIO_EN->BSRR = LCD16X2_PIN_EN;
	// Pulse length in us
	DelayUs(LCD16X2_DELAY_ENABLE_PULSE);
	/* Read high nibble first */
	if (LCD16X2_GPIO_D4->IDR & LCD16X2_PIN_D4) data |= 0x10;	
	if (LCD16X2_GPIO_D5->IDR & LCD16X2_PIN_D5) data |= 0x20;
	if (LCD16X2_GPIO_D6->IDR & LCD16X2_PIN_D6) data |= 0x40;
	if (LCD16X2_GPIO_D7->IDR & LCD16X2_PIN_D7) data |= 0x80;
	// EN pin = LOW
	LCD16X2_GPIO_EN->BRR = LCD16X2_PIN_EN;
	
	// EN pin LOW delay
	DelayUs(LCD16X2_DELAY_ENABLE_PULSE);
	
	// EN pin = HIGH
	LCD16X2_GPIO_EN->BSRR = LCD16X2_PIN_EN;
	// Pulse length in us
	DelayUs(LCD16X2_DELAY_ENABLE_PULSE);
	/* Read low nibble */
	if (LCD16X2_GPIO_D4->IDR & LCD16X2_PIN_D4) data |= 0x01;
	if (LCD16X2_GPIO_D5->IDR & LCD16X2_PIN_D5) data |= 0x02;
	if (LCD16X2_GPIO_D6->IDR & LCD16X2_PIN_D6) data |= 0x04;
	if (LCD16X2_GPIO_D7->IDR & LCD16X2_PIN_D7) data |= 0x08;
	// EN pin = LOW
	LCD16X2_GPIO_EN->BRR = LCD16X2_PIN_EN;
	
	return data;
}
